<resources>
    <string name="app_name">ARFUN</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="reset">Reset</string>
    <string name="answer">Answer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startAR">AR</string>
    <string name="arcamera">ARCamera</string>
    <string name="puzzles">Puzzles</string>
    <string name="draw">Draw</string>

    <string name="clearCanvas">Clear Paint</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
</resources>
